attand1 image change

--- a/css/style.css
+++ b/css/style.css
@@ -500,6 +500,13 @@ header.fixHeader .header {
     height: 46%;
 }
 
+.abs-div1-attand1 {
+    left: 5%;
+    top: 18%;
+    width: 90%;
+    height: 34%;
+}
+
 .abs-div2 {
     left: 0;
     top: 0;
