--- a/css/style.css
+++ b/css/style.css
@@ -508,10 +508,10 @@ header.fixHeader .header {
 }
 
 .abs-div2 {
-    left: 22%;
+    left: 23%;
     top: 54%;
-    width: 56%;
-    height: 28%;
+    width: 54%;
+    height: 27%;
 }
 
 .mainFrame {
@@ -691,3 +691,12 @@ header.fixHeader .header {
         font-size: 18px;
     }
 }
+/* 
+.cropper-crop-box, .cropper-view-box {
+    border-radius: 25%;
+}
+
+.cropper-view-box {
+    box-shadow: 0 0 0 1px #39f;
+    outline: 0;
+} */
